# Practica_Web_Design

./: Cargo.toml  README.md
CSS_practica/: style.css
DOM_practica/ejercicio-1/: exercise-1.js  index.html
DOM_practica/ejercicio-2/: exercise-2.js  index.html
DOM_practica/ejercicio-3/: exercise-3.js  index.html
DOM_practica/ejercicio-4/: exercise-4.js  index.html
DOM_practica/ejercicio-5/: exercise-5.js  index.html
DOM_practica/ejercicio-6/: exercise-6.js  index.html
DOM_practica/ejercicio-7/: exercise-7.js  index.html
ES6_practica/: ejercicio1.js  ejercicio10.js  ejercicio11.js  ejercicio12.js  ejercicio13.js  ejercicio14.js  ejercicio15.js  ejercicio2.js  ejercicio3.js  ejercicio4.js  ejercicio5.js  ejercicio6.js  ejercicio7.js  ejercicio8.js  ejercicio9.js
asincronia_practica/Ejercicio1/: index.html  index.js
asincronia_practica/Ejercicio2/: index.html  index.js
html_practica/: index.html
javascript_practica/: ejercicio1.js  ejercicio10.js  ejercicio11.js  ejercicio12.js  ejercicio13.js  ejercicio14.js  ejercicio15.js  ejercicio16.js  ejercicio17.js  ejercicio18.js  ejercicio19.js  ejercicio2.js  ejercicio20.js  ejercicio21.js  ejercicio22.js  ejercicio23.js  ejercicio24.js  ejercicio25.js  ejercicio26.js  ejercicio3.js  ejercicio4.js  ejercicio5.js  ejercicio6.js  ejercicio7.js  ejercicio8.js  ejercicio9.js
midas_bot/: Cargo.toml
practica_3/: .env
practica_3/curso-automatizador/: README.md  config.py  main.py  requirements.txt
practica_3/curso-automatizador/logs/: FAIL_LESSONS_1_Conceptos_de_IA_170039_source.html  (+24 more)
src/: main.rs
(+3 files in other folders)
