[package]
name = "midas_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
solana-account-decoder = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.2"
bs58 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
# AQUÍ ESTABA EL FALLO: Ahora forzamos rustls para saltar el bloqueo DNS
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
bincode = "1.3"
base64 = "0.21"
